--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
   pull_request_review:
     types:
       - submitted
-  # status: {}
+  status: {}
   check_run:
     types:
       - completed
