--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,17 @@ on:
   check_run:
     types:
       - completed
+  # schedule:
+  #   - cron:  '0 * * * *'
+  # push: {}
 
 jobs:
-  autotick-action:
+  regro-cf-autotick-bot-action:
     runs-on: ubuntu-latest
-    name: autotick-action
+    name: regro-cf-autotick-bot-action
     steps:
-    - name: autotick-action
-      id: aa
-      uses: beckermr/autotick-github-action@v4
+    - name: regro-cf-autotick-bot-action
+      id: regro-cf-autotick-bot-action
+      uses: beckermr/autotick-github-action@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
