--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,11 @@
 on:
-  pull_request:
+  status: {}
+  check_run:
     types:
-      - labeled
-      - unlabeled
-      - synchronize
-      - opened
-      - edited
-      - ready_for_review
-      - reopened
-      - unlocked
-  pull_request_review:
-    types:
-      - submitted
-#   status: {}
-#   check_run:
-#     types:
-#       - completed
+      - completed
   # these are commented out for now, but they could not be
   # schedule:
   #   - cron:  '0 * * * *'
-  # push: {}
 
 jobs:
   regro-cf-autotick-bot-action:
