--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v2
       - name: regro-cf-autotick-bot-action
         id: regro-cf-autotick-bot-action
-        uses: regro/cf-autotick-bot-action@prod
+        uses: regro/cf-autotick-bot-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
